settings API/swagger and local JS files
